syntax = "proto3";

package user;

option go_package = "./proto;user";

service User {
	// 用户注册
	rpc SignUp(UserSignUpReq) returns (UserSignUpResp) {}

	// 用户登录
	rpc SignIn(UserSignInReq) returns (UserSignInResp) {}

	// 查询用户信息
	rpc GetUserInfo(UserInfoReq) returns(UserInfoResp) {}
}


message UserSignUpReq{
	string user_name = 1;
	string user_pwd = 2;
	string nick_name = 3;
}

message UserSignUpResp{
	bool is_user_exist = 1;
}

message UserSignInReq{
	string user_name = 1;
	string user_pwd = 2;
}

message UserSignInResp{
	bool is_user_exist = 1;
	bool is_pwd_error = 2;
}

message UserInfoReq{
	string user_name = 1;
}

message UserInfoResp{
	int64 user_id = 1;
	string user_name = 2;
	string nick_name = 3;
}

